Update width with min() css func, also remove padding-left val on nav for smaller screens to prevent pushing the nav out of alignment with the main content below it

--- a/client/src/components/layout/header/Header.css
+++ b/client/src/components/layout/header/Header.css
@@ -5,12 +5,11 @@
 
 .nav {
     margin: 0 auto;
-    padding: 0 .875rem;
+    padding-left: .875rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: var(--wrapper-max-width);
-    width: var(--wrapper-width);
+    width: min(var(--wrapper-width), var(--wrapper-max-width));
 }
 
 .nav__logo-img {
@@ -62,6 +61,7 @@
 @media screen and (max-width: 68em) {
     .nav {
         flex-direction: column;
+        padding-left: 0;
     }
 
     .nav__logo-link,
